# fathom_sdk

./: .gitignore
py/fathom_sdk/: abstractions.py  architectures.py  evaluation.py  models.py  predictions.py  xform.py  xform_nodeps.py
rust/: Cargo.toml
rust/src/: abstractions.rs  api_call.rs  core.rs  lib.rs  securities.rs  tickers.rs
