[package]
name = "fathom_sdk"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[workspace]

[lib]
name = "fathom_sdk"
path = "src/lib.rs"


[dependencies]
chrono = {version = "0.4.19", features = ["serde"] }
nalgebra = "0.31.4"
serde = "1.0.152"
serde_json = "1.0.91"
statistical = "1.0.0"


