[package]
name = "fathom_sdk"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[workspace]

[lib]
name = "fathom_sdk"
path = "src/lib.rs"


[dependencies]
chrono = {version = "0.4.19", features = ["serde"] }
serde = { version="1.0.147", features = ["derive"] }
serde_json = "1.0.81"
statistical = "1.0.0"


